# baobab-web-api-caller

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: 00_dev_constraints.md  01_specifications.md  02_dev_diary.md  03_release_validation_checklist.md  04_verify_test_mirror.py  PR_BODY_API_1_0_0.md  PR_BODY_BETA_RC_STABILIZATION.md  PR_BODY_PYPI_PACKAGING_1_0_0.md  PR_BODY_README_PRODUCT_PYPI.md  PR_BODY_docs_structure_v1.md  checklist_go_1_0_0.md  dev_diary.md  public_api_1_0_0.md  release_beta_rc_recommendation.md  release_notes_1_0_0.md  release_validation_checklist.md  verify_test_mirror.py
docs/examples/: bulk_file_downloader_minimal.py  pagination_minimal.py  service_caller_minimal.py
docs/roadmaps/: roadmap_v1.md
docs/v1.0.0/: 01_checklist_go.md  02_release_notes.md  03_release_beta_rc_recommendation.md
scripts/: cards_set_extractor.py
src/baobab_web_api_caller/: __init__.py
src/baobab_web_api_caller/auth/: __init__.py  api_key_header_authentication_strategy.py  api_key_query_authentication_strategy.py  authentication_strategy.py  basic_authentication_strategy.py  bearer_authentication_strategy.py  no_authentication_strategy.py
src/baobab_web_api_caller/config/: __init__.py  default_header_provider.py  rate_limit_policy.py  retry_policy.py  service_config.py
src/baobab_web_api_caller/core/: __init__.py  baobab_request.py  baobab_response.py  baobab_web_api_caller.py  error_response_mapper.py  http_method.py  json_response_decoder.py  request_url_builder.py  response_decoder.py
src/baobab_web_api_caller/download/: __init__.py  bulk_file_downloader.py
src/baobab_web_api_caller/exceptions/: __init__.py  authentication_exception.py  baobab_web_api_caller_exception.py  client_http_exception.py  configuration_exception.py  http_exception.py  rate_limit_exception.py  resource_not_found_exception.py  response_decoding_exception.py  server_http_exception.py  service_call_exception.py  timeout_exception.py  transport_exception.py
src/baobab_web_api_caller/pagination/: __init__.py  next_page_url_extractor.py  page_extractor.py  page_result.py  paginator.py
src/baobab_web_api_caller/service/: __init__.py  baobab_service_caller.py
src/baobab_web_api_caller/transport/: __init__.py  call_context_builder.py  http_transport_caller.py  requests_session_factory.py  sleeper.py  system_sleeper.py  system_time_provider.py  throttler.py  time_provider.py
src/baobab_web_api_caller/utils/: __init__.py  mapping_utils.py
tests/: __init__.py
tests/baobab_web_api_caller/: __init__.py  test_package_metadata.py  test_public_api_exports.py
tests/baobab_web_api_caller/auth/: __init__.py  test_api_key_header_authentication_strategy.py  test_api_key_query_authentication_strategy.py  test_authentication_strategy.py  test_basic_authentication_strategy.py  test_bearer_authentication_strategy.py  test_no_authentication_strategy.py
tests/baobab_web_api_caller/config/: __init__.py  test_default_header_provider.py  test_rate_limit_policy.py  test_retry_policy.py  test_service_config.py
tests/baobab_web_api_caller/core/: __init__.py  test_baobab_request.py  test_baobab_response.py  test_baobab_web_api_caller.py  test_error_response_mapper.py  test_http_method.py  test_json_response_decoder.py  test_request_url_builder.py  test_response_decoder.py
tests/baobab_web_api_caller/download/: __init__.py  test_bulk_file_downloader.py
tests/baobab_web_api_caller/exceptions/: __init__.py  test_authentication_exception.py  test_baobab_web_api_caller_exception.py  test_client_http_exception.py  test_configuration_exception.py  test_http_exception.py  (+8 more)
(+24 files in other folders)
