[build-system]
requires = ["hatchling>=1.24,<2.0"]
build-backend = "hatchling.build"

[project]
name = "baobab-web-api-caller"
version = "1.0.0"
description = "Librairie Python orientée objet pour simplifier et fiabiliser les appels HTTP(S) vers des API REST."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
authors = [{ name = "ANDRIANAIVO Michel Patrick", email = "patrick.andri@gmail.com" }]
keywords = ["http", "rest", "api", "client", "requests"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.32.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/baobabgit/baobab-web-api-caller"
Repository = "https://github.com/baobabgit/baobab-web-api-caller"
Documentation = "https://github.com/baobabgit/baobab-web-api-caller/blob/main/README.md"
Changelog = "https://github.com/baobabgit/baobab-web-api-caller/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "bandit>=1.7.8,<2.0",
  "black>=24.8.0,<25.0",
  "coverage[toml]>=7.6.1,<8.0",
  "flake8>=7.1.1,<8.0",
  "flake8-pyproject>=1.2.3,<2.0",
  "mypy>=1.11.2,<2.0",
  "pylint>=3.2.7,<4.0",
  "pytest>=8.3.2,<9.0",
  "pytest-cov>=5.0.0,<6.0",
  "types-requests>=2.32.0.20240914,<3.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["baobab_web_api_caller"]
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.pylint.MASTER]
jobs = 0
py-version = "3.11"
ignore-paths = [
  "^\\.venv/.*$",
  "^docs/.*$",
  "^docs/tests/coverage/.*$",
]
source-roots = ["src"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "fixme",
  "too-few-public-methods",
]

[tool.pylint.SIMILARITIES]
# Évite les R0801 artificiels entre fichiers de tests (doublons légitimes de helpers / requêtes).
min-similarity-lines = 20

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "x", "y", "z"]

[tool.pylint.DESIGN]
max-args = 7
max-attributes = 10
max-public-methods = 30

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
  ".venv",
  "docs/tests/coverage",
]

[tool.bandit]
exclude_dirs = [".venv", "docs/tests/coverage"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=baobab_web_api_caller",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=90",
]
markers = [
  "integration_external: tests réseau optionnels contre HTTPBin / Postman Echo (opt-in via env)",
]

[tool.coverage.run]
branch = true
source = ["baobab_web_api_caller"]
data_file = "docs/tests/coverage/.coverage"
parallel = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "docs/tests/coverage/html"

[tool.coverage.xml]
output = "docs/tests/coverage/coverage.xml"

